--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,6 @@
 version = "3.8.2"
 
-runner.dialect = scala213
+runner.dialect = scala213source3
 preset = defaultWithAlign
 danglingParentheses.preset = false
 align.openParenCallSite = true
