Enable code coverage.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,12 @@ jobs:
           cache: 'sbt'
 
       - name: Build project
-        run: sbt codeVerify +test
+        run: sbt codeVerify coverage +test coverageReport coverageAggregate
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          fail_ci_if_error: false
 
   publish:
     name: Publish
